--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.6" />
     <PackageReference Include="Microsoft.NETCore.App" Version="1.1.2" />
   </ItemGroup>
